# GlacierFormats

./: CMakeLists.txt  README.md
GlacierFormats/: CMakeLists.txt
GlacierFormats/include/: GlacierFormats.h
GlacierFormats/src/: BORG.cpp  BORG.h  BinaryReader.hpp  BinaryWriter.hpp  BoneWeightBuffer.cpp  BoneWeightBuffer.h  Crypto.cpp  Crypto.h  Debug.h  DebugBuffer.h  DllMain_.cpp  EncodingDevice.cpp  EncodingDevice.h  Exceptions.cpp  Exceptions.h  GLTFAsset.cpp  GLTFAsset.h  GLTFMesh.cpp  GLTFMesh.h  GlacierFormats.cpp  GlacierResource.cpp  GlacierResource.h  GlacierTypes.cpp  GlacierTypes.h  Hash.h  IMaterial.h  IMesh.cpp  IMesh.h  IRenderAsset.h  IRig.cpp  IRig.h  IntegerRangeCompression.h  MATE.cpp  MATE.h  MATI.cpp  MATI.h  Material.cpp  Material.h  MaterialNodeTree.cpp  MaterialNodeTree.h  (+62 more)
GlacierFormats/src/Export/: FBXExporter.cpp  FBXExporter.h  GLTFExporter.cpp  GLTFExporter.h  PNGExporter.cpp  PNGExporter.h  TGAExporter.cpp  TGAExporter.h
GlacierFormatsSamples/: CMakeLists.txt
GlacierFormatsSamples/MATINameToPRIMMapping/: CMakeLists.txt
GlacierFormatsSamples/MATINameToPRIMMapping/src/: main.cpp
GlacierFormatsSamples/ParsingCoverage/: CMakeLists.txt
GlacierFormatsSamples/ParsingCoverage/src/: main.cpp
GlacierFormatsSamples/PatchBuilder/: CMakeLists.txt
GlacierFormatsSamples/PatchBuilder/src/: main.cpp
GlacierFormatsSamples/RenderAssetIO/: CMakeLists.txt
GlacierFormatsSamples/RenderAssetIO/src/: main.cpp
GlacierFormatsTests/: CMakeLists.txt  MatiTests.h  Texture.h  test.cpp
GlacierFormatsTests/googletest/: CMakeLists.txt
